--- a/review.css
+++ b/review.css
@@ -11,125 +11,100 @@ body{
     color: #222;
 }
 
+/*title*/
+
 main{
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    text-align: center;
-    height: 100vh;
+    align-items: center;
+ 
 }
 
-#title{
-    font-family: 'Roboto', sans-serif;
+.title{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    margin-top: 8ch;
 }
 
 h1{
-    letter-spacing: 0.25ch;
+letter-spacing: 0.25ch;
 }
 
-#blueBorder{
-    display: block;
-    width: 10.5ch;
-    height: 0.5ch;
-    background-color:#49A6E9;
-    margin-top: 1.5ch;
+.underline{
+display: flex;
+width: 80%;
+height: 0.5ch;
+width: 30%;
+background-color: hsl(205, 78%, 60%);
+margin: 0.75ch;
 }
 
+
+
+
+/*conatiner*/
+.container{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 60vh;
+
+background-color: #fff;
+border-radius: 7px;
+padding: 0 3ch;
+letter-spacing: 0.12ch;
+margin-top: 4ch;
+}
 
 img{
-width: 15ch;
-height: 15ch;
-background-color: #49A6E9;
-border-radius: 50%;
-padding:0.75ch 0.75ch  0 0 ;
-object-fit: cover;
-
+    width: 15ch;
+    height: 15ch;
+    border-radius: 50%;
+    object-fit: cover;
+    background-color: hsl(205, 89%, 70%);
+    padding-top: 0.75ch;
+    padding-right: 0.75ch;
 }
 
-#subContainer{
-    background-color: #fff;
-    color: #222;
-    width: 80%;
-    height: 55%;
-    border-radius: 9px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    margin-top: 6ch;
-}
-
-#authorName{
+.authorName{
     text-transform: capitalize;
-    letter-spacing: 0.45ch;
-    padding: 1.5ch;
+    margin: 0.75ch 0;
 }
 
-#authorRole{
+.authorRole{
     text-transform: uppercase;
-    color: #49A6E9;
-    letter-spacing: 0.25ch;
-    padding: 0;
-
+    color: hsl(205, 89%, 70%);
+    letter-spacing: 0.5ch;
+    margin: 0.75ch 0;
 }
 
-#authorDescription{
-    color: #617D98;
-    padding: 1.5ch;
-
+.authorResume{
+    margin: 1.5ch 0;
 }
 
-.material-symbols-outlined{
-   
-    cursor: pointer;
-}
-
-.material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 700,
-    'GRAD' 0,
-    'opsz' 48
-  }
-
-button{
-    color: #49A6E9;
-    background-color: #ebf7ff;
-    font: 0.95rem Arial ;
-    width: 92px;
-    height: 27px;
-    border-radius: 9px;
-    border: #49A6E9 2px solid;
-    cursor: pointer;
-
-}
-
-button:hover{
-    background-color: #49A6E9;
-    color: #222;
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in;
-}
-
-#prev_next{
-    margin: 1ch 3ch;
-}
-
-#buttonRight{
-width: auto;
-height: auto;
+.btnArrow{
+cursor: pointer;
+background-color: inherit;
 border: none;
-
+color: hsl(205, 89%, 70%);
+margin: 0.75ch 0;
 }
 
-#buttonLeft{
-    width: auto;
-    height: auto;
-    border: none;
+.btn_randomChoice{
+    background-color: inherit;
+    font: large arial;
+    border-radius: 6px;
+    border-top: 2px solid hsl(205, 89%, 70%);
+    border-left: 2px solid hsl(205, 89%, 70%);
+    color: hsl(205, 63%, 48%);
+    cursor: pointer;
+    width: 10ch;
+}
+
+.btn_randomChoice:hover{
+    color: #222;
+    background-color: hsl(205, 89%, 70%);
 }
